testsuite/tests/typecheck/should_fail/T17566c.stderr

T17566c.hs:11:12: error:
    • Different names for the same type variable:
        ‘k’ bound at T17566c.hs:10:12
        ‘k’ bound at T17566c.hs:11:12
    • In the class declaration for ‘C2’
